fix: table border and field spacing

--- a/packages/css/src/field.css
+++ b/packages/css/src/field.css
@@ -6,7 +6,7 @@
     margin-block: 0;
   }
   & > * + * {
-    margin-block-start: var(--dsc-field-content-spacing);
+    margin-top: var(--dsc-field-content-spacing);
   }
 
   & [data-field='description'] {
