--- a/packages/css/src/input.css
+++ b/packages/css/src/input.css
@@ -43,6 +43,7 @@
   min-width: 0; /* Allow shrinking in flex container, see https://ishadeed.com/article/min-max-css/#setting-min-width-to-zero-with-flexbox */
   padding: var(--dsc-input-padding);
   position: relative; /* Ensure foucs outline renders on top */
+  vertical-align: middle; /* Remove space under when display: inline-block */
 
   @composes ds-focus from './base.css';
 
